fixed bug with tasks overflow

--- a/frontend/src/app/pages/task-view/task-view.component.scss
+++ b/frontend/src/app/pages/task-view/task-view.component.scss
@@ -29,6 +29,7 @@
     flex-direction: column;
     flex-grow: 1;
     padding: 42px;
+    overflow-y: scroll;
 
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
@@ -72,6 +73,8 @@
             color: $blue;
         }
     }
+
+    
 }
 
 .task {
@@ -116,9 +119,8 @@
         opacity: 0;
         transform: scale(0.8);
     }
-}
 
-.circle-add-button {
+     .circle-add-button {
     position: absolute;
     bottom: 35px;
     right: 35px;
@@ -126,3 +128,7 @@
     width: 50px;
     border-radius: 50%;
 }
+
+
+}
+
